<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="16dp">


    <EditText
        android:id="@+id/et_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_title"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/et_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_date"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/et_studio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_studio"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/et_genre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_genre"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/et_rating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_rating"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/et_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_description"
        android:layout_marginBottom="8dp"/>

    <ImageView
        android:id="@+id/game_image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/ic_photo"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update"
        android:textColor="@color/white"
        android:backgroundTint="#673AB7"/>

</LinearLayout>